Fixed spacing and overflow issues

--- a/frontend/src/input.css
+++ b/frontend/src/input.css
@@ -6,4 +6,19 @@ html,
 body {
   width: 100%;
   height: 100%;
+  background: red;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  width: 0.5em;
+  background-color: transparent;
+}
+
+.hide-scrollbar::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.hide-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 0;
 }
